# GL_Cpp

./: CMakeLists.txt  Checkerboard.cpp  Cube-sphere.cpp  CubeGridMesh  CubeGridSkyline.cpp  CubeTiledFloor.cpp  Gen_Checker_ppm.cpp  Icosphere.cpp  PPM_Batch.cpp  PPM_Batch.py  Phong_demo.cpp  UV-sphere.cpp  WaveSurface.cpp  compact_demo.cpp  example_test.cpp  main.cpp  ppm2img.cpp  sharedVertexCube.cpp  tiny_test.cp
include/: 'Mesh3D.hp  Bezier2D.hpp  Bresenham.hpp  CompoundGraphicObject2D.hpp  Drawing2D.hpp  GO_Point2D.hpp  GO_Polyline2D.hpp  IGraphicObject2D.hpp  Line2D.hpp  Line3D.hpp  Material.hpp  Mesh3D.hpp  MeshBuilders.hpp  MeshRenderer2D.hpp  Point2D.hpp  Point3D.hpp  Projection3D.hpp  RasterBuffer.hpp  Renderer2D.hpp  Scene3D.hpp  Shading.hpp  Texture2D.hpp  Transformation2D.hpp  Transformation3D.hpp  View3D.hpp  View3DParameters.hpp
src/: Line2D.cpp  Line3D.cpp  MeshRenderer.cpp  Point2D.cpp  Point3D.cpp  Polygon3D.cpp  Polygon3D.hpp  Projection3D.cpp  Scene3D.cpp  Transformation2D.cpp  Transformation3D.cpp  View3D.cpp  View3DParameters.cpp
test/: GO_Polygon2D.cpp  Line.cpp  Pipeline.cpp  Pipeline3.cpp  Point.cpp  Polygon3D.cpp  Projection3D.cpp  Scene3D.cpp  Transformation2D.cpp  Transformation3D.cpp  View3D.cpp  View3DParameters.cpp  ZBuffer.cpp
